GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/LoyaltyMemberTier.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>