GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/fields/CurrentTierDateTime__c.field-meta.xml
<CustomField>
    <fullName>CurrentTierDateTime__c</fullName>
    <label>CurrentTierDateTime</label>
    <type>DateTime</type>
</CustomField>