GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/fields/Manual_Tier_Immunity_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Manual_Tier_Immunity_Expiration_Date__c</fullName>
    <label>Manual Tier Immunity Expiration Date</label>
    <type>Date</type>
</CustomField>