GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/fields/Manual_Tier_Immunity_Level__c.field-meta.xml
<CustomField>
    <fullName>Manual_Tier_Immunity_Level__c</fullName>
    <formula>LoyaltyMember.Manual_Tier_Immunity_Level__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manual Tier Immunity Level</label>
    <type>Text</type>
</CustomField>