GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/fields/Member_Referral__c.field-meta.xml
<CustomField>
    <fullName>Member_Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Member Referral</label>
    <referenceTo>LoyaltyProgramMember</referenceTo>
    <relationshipLabel>Loyalty Member Tiers</relationshipLabel>
    <relationshipName>Member_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>