GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/fields/PreviousTierDateTime__c.field-meta.xml
<CustomField>
    <fullName>PreviousTierDateTime__c</fullName>
    <label>PreviousTierDateTime</label>
    <type>DateTime</type>
</CustomField>