GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <label>Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Sales</fullName>
            </value>
            <value>
                <fullName>EXCO</fullName>
            </value>
            <value>
                <fullName>Press Office</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>