GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/fields/Subscription_Tier_Immunity_Level__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Tier_Immunity_Level__c</fullName>
    <formula>LoyaltyMember.Subscription_Tier_Immunity_Level__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Tier Immunity Level</label>
    <type>Text</type>
</CustomField>