GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/fields/Tier_Immunity_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Tier_Immunity_Expiration_Date__c</fullName>
    <inlineHelpText>Expiration date of the Immunity from the current Loyalty Member Tier</inlineHelpText>
    <label>Tier Immunity Expiration Date</label>
    <type>Date</type>
</CustomField>