GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/fields/Tier_Immunity_Reason__c.field-meta.xml
<CustomField>
    <fullName>Tier_Immunity_Reason__c</fullName>
    <inlineHelpText>Reason to have Tier Immunity</inlineHelpText>
    <label>Tier Immunity Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>