GearsetPOC/force-app/main/default/objects/LoyaltyMemberTier/validationRules/ChangeReasonType_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ChangeReasonType_mandatory</fullName>
    <active>true</active>
    <description>Tier Immunity Reason mandatory if the Tier Immunity flag is true.</description>
    <errorConditionFormula>AND(
				Tier_Immunity__c ,
				ISBLANK(Tier_Immunity_Reason__c))</errorConditionFormula>
    <errorDisplayField>Tier_Immunity_Reason__c</errorDisplayField>
    <errorMessage>Its mandatory to fill Tier Immunity Reason Field</errorMessage>
</ValidationRule>